# competeiq

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  pytest.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
Colab-Project/: CompeteIQ.ipynb  Week-1 Assignment.ipynb  Week-2 Assignment.ipynb  Week-3 Assignment.ipynb  Week-4 Assignment.ipynb  Week-5 Assignment.ipynb  Week-6 Assignment.ipynb  Week-7 Assignment.ipynb  Week-8 Assignment.ipynb
Colab-Project/datasets/: 1) Intro and flow docs.docx  2) JSON input for agent 1.docx  3)Output sample agent 1.docx  4) JSON input for AGENT 2.docx  5) Sample output agent 2.docx
Colab-Project/docs/: CompeteIQ_Markdown.md
deploy/: Dockerfile  Dockerfile.ui  docker-compose.yml
deploy/aws/: README.md  deploy.ps1  service.json  target-group.json  task-definition.json
docs/: README.md  architecture.md  colab-vs-local.md  configuration.md  dataset-schema.md  deployment-aws.md  development.md  docker.md  observability.md  problem-statement-mapping.md  testing.md  usage-cli.md  usage-ui.md
docs/adr/: 0001-langchain-pydantic.md  0002-chromadb.md  0003-gradio-typer.md  0004-langfuse.md
requirements/: base.in  base.txt  dev.in  dev.txt  test.in  test.txt
scripts/: export_graph.py  generate_datasets.py  run_analysis.py  seed_vector_store.py
src/competeiq/: __init__.py  cli.py  config.py  environment.py  logging_setup.py  system.py
src/competeiq/agents/: __init__.py  _base.py  catalog_agent.py  marketing_agent.py  models.py  price_agent.py
src/competeiq/analysis/: __init__.py  eda.py
src/competeiq/data/: __init__.py  catalogs.py  generator.py  loader.py  processor.py  schemas.py
src/competeiq/embeddings/: __init__.py  vector_store.py
src/competeiq/graph/: __init__.py  knowledge_graph.py  visualize.py
src/competeiq/orchestration/: __init__.py  orchestrator.py
src/competeiq/tracing/: __init__.py  langfuse_client.py  traced_llm.py
src/competeiq/ui/: __init__.py  gradio_app.py  handlers.py
tests/: conftest.py
tests/it/: TEST_PLAN.md  conftest.py
tests/it/api/: test_catalog_agent_live.py  test_embeddings_roundtrip.py  test_marketing_agent_live.py  test_orchestrator_live.py  test_price_agent_live.py  test_system_live.py  test_vector_store_live.py
tests/it/ui/: test_gradio_build.py  test_gradio_client_e2e.py
tests/ut/: TEST_PLAN.md  conftest.py  test_agents.py  test_agents_models.py  test_aggregate_insights.py  test_cli.py  test_config.py  test_environment.py  test_generator.py  test_knowledge_graph.py  test_loader.py  test_orchestrator.py  test_processor.py  test_system.py  test_ui_handlers.py  test_vector_store.py
