[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "competeiq"
version = "0.1.0"
description = "AI-driven multi-agent e-commerce competitive intelligence system"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Manoj Soma Kumaran" }]
keywords = ["llm", "multi-agent", "competitive-intelligence", "ecommerce", "langfuse", "chromadb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain==0.3.14",
    "langchain-openai==0.3.0",
    "langchain-community==0.3.14",
    "langfuse==2.57.1",
    "openai==1.59.6",
    "chromadb==0.5.23",
    "networkx==3.4.2",
    "pyvis==0.3.2",
    "gradio>=4.44,<5",
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "seaborn>=0.13",
    "matplotlib>=3.8",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "typer>=0.12,<1",
    "rich>=13.7",
    "tenacity>=8.3",
    "python-dotenv>=1.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pip-tools>=7.4",
    "build>=1.2",
]
test = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "pytest-asyncio>=0.23",
    "coverage[toml]>=7.5",
    "gradio-client>=1.3",
]

[project.scripts]
competeiq = "competeiq.cli:app"

[project.gui-scripts]
competeiq-ui = "competeiq.ui.gradio_app:main"

[project.urls]
Homepage = "https://github.com/manojsomakumaran/competeiq"
Repository = "https://github.com/manojsomakumaran/competeiq"
Issues = "https://github.com/manojsomakumaran/competeiq/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
competeiq = ["py.typed"]

# --- Tooling ---

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["Colab-Project", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
# E501 handled by formatter; B008 is standard Typer pattern; RUF012/RUF015 are
# style preferences that conflict with our test stubs and typed dict maps.
ignore = ["E501", "B008", "RUF012", "RUF015"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F841"]  # test stubs may declare-but-not-use throwaway locals

[tool.black]
line-length = 100
target-version = ["py311"]
extend-exclude = "Colab-Project|build|dist"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
exclude = "Colab-Project|build|dist"

[tool.coverage.run]
branch = true
source = ["competeiq"]
omit = [
    "src/competeiq/ui/gradio_app.py",  # launch wrapper
    "src/competeiq/cli.py",             # entry point
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
